@@ -47,9 +47,9 @@ sub handler {
     ok t_cmp join(" ", $jar->get("foo")), "1 3", '$jar->get("foo")';
 
     ok not defined $jar->cookie_class("APR::Request::Cookie");
-    ok t_cmp $_->tainted, 1, "is tainted: $_" for values %$jar;
-    $_->tainted(0) for values %$jar;
-    ok t_cmp $_->tainted, 0, "not tainted: $_" for values %$jar;
+    ok t_cmp $_->is_tainted, 1, "is tainted: $_" for values %$jar;
+    $_->is_tainted(0) for values %$jar;
+    ok t_cmp $_->is_tainted, 0, "not tainted: $_" for values %$jar;
 
     eval { $jar->cookie_class("APR::Request::Param") };
     ok t_cmp qr/^Usage/, $@, "Bad class name";
