@@ -47,9 +47,9 @@ sub handler {
     ok t_cmp join(" ", $args->get("foo")), "1 3", '$args->get("foo")';
 
     ok not defined $args->param_class("APR::Request::Param");
-    ok t_cmp $_->tainted, 1, "is tainted: $_" for values %$args;
-    $_->tainted(0) for values %$args;
-    ok t_cmp $_->tainted, 0, "not tainted: $_" for values %$args;
+    ok t_cmp $_->is_tainted, 1, "is tainted: $_" for values %$args;
+    $_->is_tainted(0) for values %$args;
+    ok t_cmp $_->is_tainted, 0, "not tainted: $_" for values %$args;
 
 
     eval { $args->param_class("APR::Request::Cookie") };
