@@ -4,6 +4,10 @@
 
 @section v2_05_dev Changes with libapreq2-2.05-dev
 
+
+- C API [joes]
+  Add utf8 charset flag for params.
+
 - C API [joes]
   Replace v->size with v->nlen + v->dlen.
   Added supporting apreq_value_table_add().
